# GraphAgentService

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  agent-stream-event-langgraph-migration.md  main.py  pyproject.toml  settings.yaml  test_main.http
.claude/: index.json  settings.local.json
.github/workflows/: python-ci-cd.yml
deploy/k3s/: .env.example  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
doc/: scaffold.md
doc/tutorial/: getting-started.md
doc/wiki/: api-stream-contract.md  fallback-mechanism.md  logto-auth.md  mcp.md  plan-analyze-interrupt-resume.md  react-native-graph-integration.md  runtime-binding.md  scaffold.md  sse.md
src/graphagentservice/: __main__.py  config.py  main.py
src/graphagentservice/api/: __init__.py  dependencies.py  router.py
src/graphagentservice/common/: __init__.py  checkpoint.py  config.py  failures.py  lifecycle.py  logging.py  middleware.py  trace.py
src/graphagentservice/graphs/: CLAUDE.md  __init__.py  registry.py  runtime.py
src/graphagentservice/llm/: CLAUDE.md  factory.py  profile.py  router.py
src/graphagentservice/mcp/: CLAUDE.md  __init__.py  headers.py  models.py  resolver.py
src/graphagentservice/memory/: __init__.py  commit.py  provider.py
src/graphagentservice/schemas/: __init__.py  analysis.py  api.py  body_report.py  plan_summary.py  tool_agent.py
src/graphagentservice/services/: __init__.py  agent_events.py  chat_stream_service.py  failure_classifier.py  graph_service.py  graph_stream_service.py  image_input.py  plan_analyze_summary_service.py  sse.py  state_repair.py  stream_event_bus.py  stream_event_sinks.py  stream_events.py  tool_execution.py
src/graphagentservice/tools/: math.py  registry.py  time.py
src/overmindagent/: __main__.py  config.py  main.py
test/: test_body_report_analyze.py  test_image_input_processor.py  test_litellm_data_url_integration.py  test_qwen_multimodal_structured.py
tests/: test_chat_stream_service.py  test_config.py  test_graphs.py  test_image_agent.py  test_llm_factory.py  test_logto_auth.py  test_main.py  test_mcp_integration.py  test_plan_analyze_graph.py
(+94 files in other folders)
