[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overmindagent"
version = "0.1.0"
description = "FastAPI service managed with uv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "langgraph>=0.6.6",
    "openai>=1.68.2",
    "pydantic-settings>=2.10.1",
    "uvicorn[standard]>=0.41.0",
]

[project.scripts]
overmindagent = "overmindagent.__main__:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/overmindagent"]
